--- a/microservices/notification-service/src/main/resources/i18n/messages_cs.properties
+++ b/microservices/notification-service/src/main/resources/i18n/messages_cs.properties
@@ -1,7 +1,7 @@
-email.welcome.subject=Vítejte v Karate Management System
-email.welcome.title=Vítejte, {0}!
-email.welcome.lead=D?kujeme za registraci do Karate Management System.
+email.welcome.subject=V\u00EDtejte v Karate Management System
+email.welcome.title=V\u00EDtejte, {0}!
+email.welcome.lead=D\u011Bkujeme za registraci do Karate Management System.
 email.welcome.club=Klub
-email.welcome.rank=Stupe?
-email.welcome.cta=P?ejít na panel
-email.welcome.footer=Pokud jste ú?et nevytvo?ili vy, ignorujte tento e-mail.
+email.welcome.rank=Stupe\u0148
+email.welcome.cta=P\u0159ej\u00EDt na panel
+email.welcome.footer=Pokud jste \u00FA\u010Det nevytvo\u0159ili vy, ignorujte tento e-mail.
