--- a/microservices/notification-service/src/main/resources/i18n/messages_fr.properties
+++ b/microservices/notification-service/src/main/resources/i18n/messages_fr.properties
@@ -4,4 +4,4 @@ email.welcome.lead=Merci de votre inscription au Karate Management System.
 email.welcome.club=Club
 email.welcome.rank=Grade
 email.welcome.cta=Aller au tableau de bord
-email.welcome.footer=Si vous n?êtes pas à l?origine de ce compte, ignorez cet e-mail.
+email.welcome.footer=Si vous n\u2019\u00EAtes pas \u00E0 l\u2019origine de ce compte, ignorez cet e-mail.
