--- a/microservices/notification-service/src/main/resources/i18n/messages_en.properties
+++ b/microservices/notification-service/src/main/resources/i18n/messages_en.properties
@@ -4,4 +4,4 @@ email.welcome.lead=Thanks for registering in the Karate Management System.
 email.welcome.club=Club
 email.welcome.rank=Rank
 email.welcome.cta=Go to dashboard
-email.welcome.footer=If you didn?t create this account, please ignore this email.
+email.welcome.footer=If you didn't create this account, please ignore this email.
