--- a/microservices/notification-service/src/main/resources/i18n/messages_ja.properties
+++ b/microservices/notification-service/src/main/resources/i18n/messages_ja.properties
@@ -1,7 +1,7 @@
-email.welcome.subject=?????????????????
-email.welcome.title={0} ???????
-email.welcome.lead=Karate Management System ???????????????????
-email.welcome.club=???
-email.welcome.rank=??
-email.welcome.cta=????????
-email.welcome.footer=??????????????????????????
+email.welcome.subject=\u7A7A\u624B\u7BA1\u7406\u30B7\u30B9\u30C6\u30E0\u3078\u3088\u3046\u3053\u305D
+email.welcome.title={0} \u3055\u3093\u3001\u3088\u3046\u3053\u305D\uFF01
+email.welcome.lead=Karate Management System \u306B\u3054\u767B\u9332\u3044\u305F\u3060\u304D\u3042\u308A\u304C\u3068\u3046\u3054\u3056\u3044\u307E\u3059\u3002
+email.welcome.club=\u30AF\u30E9\u30D6
+email.welcome.rank=\u6BB5\u4F4D
+email.welcome.cta=\u30C0\u30C3\u30B7\u30E5\u30DC\u30FC\u30C9\u3078\u79FB\u52D5
+email.welcome.footer=\u3053\u306E\u30A2\u30AB\u30A6\u30F3\u30C8\u3092\u4F5C\u6210\u3057\u3066\u3044\u306A\u3044\u5834\u5408\u306F\u3001\u3053\u306E\u30E1\u30FC\u30EB\u3092\u7121\u8996\u3057\u3066\u304F\u3060\u3055\u3044\u3002
